--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "dotenv": "^17.2.3",
+    "nestjs-pino": "^4.5.0",
     "nestjs-zod": "^5.1.1",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "pino-pretty": "^13.1.3",
     "prettier": "^3.4.2",
     "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
@@ -60,6 +62,9 @@
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
