setup DI factory functions for notes, need to add pino logger DI

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "moduleResolution": "node"
+    "moduleResolution": "node16",
+    "ignoreDeprecations": "6.0",
+    "module": "node16"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__"]
