--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,9 +20,11 @@
     "@fastify/cors": "^11.2.0",
     "@prisma/client": "^7.3.0",
     "@trpc/server": "^11.9.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
+    "prisma-zod-generator": "^2.1.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
