--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
@@ -18,7 +18,6 @@
   "packageManager": "pnpm@10.28.2",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
-    "@prisma/client": "^7.3.0",
     "@trpc/server": "^11.9.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
@@ -29,8 +28,9 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@prisma/client": "6.6.0",
     "@types/node": "^25.1.0",
-    "prisma": "^7.3.0",
+    "prisma": "6.6.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
