--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "moduleResolution": "node16",
+    "moduleResolution": "bundler",
     "ignoreDeprecations": "6.0",
-    "module": "node16"
+    "module": "esnext"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__"]
