--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,7 +16,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.28.2",
+  "packageManager": "bun@2.2.0",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
     "@trpc/server": "^11.9.0",
@@ -24,7 +24,6 @@
     "fastify": "^5.7.2",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
-    "prisma-zod-generator": "^2.1.2",
     "superjson": "^2.2.6",
     "zod": "^4.3.6"
   },
