--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,8 +19,10 @@
   "packageManager": "bun@2.2.0",
   "dependencies": {
     "@cs2monorepo/shared": "workspace:*",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.2.0",
     "@trpc/server": "^11.9.0",
+    "better-auth": "^1.4.18",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "pino": "^10.3.0",
