--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,14 +21,16 @@
     "@cs2monorepo/shared": "workspace:*",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@trpc/server": "^11.9.0",
     "better-auth": "^1.4.18",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
+    "react-hook-form": "^7.71.1",
     "superjson": "^2.2.6",
-    "zod": "^4.3.6"
+    "zod": "3.25.7"
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
